<resources>
    <string name="app_name">MyRoutine</string>
    <string name="toolbar">Toolbar</string>
    <string name="animBackground">Animated Background</string>
    <string name="hostFragment">Hosting Fragment</string>
    <string name="nav_bottom">Location for Bottom NAvigation</string>
    <string name="img_user">User Image</string>
    <string name="cotn_profile">Background Profile Button</string>
    <string name="cotn_nutrition">Background Nutrition Button</string>
    <string name="cotn_sport">Background Sport Button</string>
    <string name="btn_profile">Profile</string>
    <string name="btn_sport">Sport</string>
    <string name="btn_sportKnowledge">Sport Knowledge</string>
    <string name="btn_nutrition">Nutrition</string>
    <string name="settings_text_select_theme">Select Theme:</string>
    <string name="settings_text_credentials">Credentials</string>
    <string name="settings_text_username_hint">username</string>
    <string name="settings_text_password_hint">password</string>
    <string name="settings_text_sync_automatically">Sync automatically</string>
    <string name="settings_text_location">Location</string>
    <string name="settings_text_state_on">On</string>
    <string name="settings_text_state_off">Off</string>
    <string name="settings_text_clear_data">Clear Data</string>
    <string name="button_menu">Main Menu</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="tvExerciseName">Name of Exercise </string>
    <string name="tvBodyPart">Body Part: </string>
    <string name="tvTargetOfExercise">Target of Exercise: </string>
    <string name="tvExerciseEquipment">Equipment: </string>
    <string name="etBodyPart">Body Part</string>
    <string name="etTargetOfExercise">Target of Exercise</string>
    <string name="etExerciseEquipment">et Equipment</string>
    <string name="descEtBodyPart">Inserted Api value for Body Part</string>
    <string name="descEtTargetOfExercise">Inserted Api value for Target of Exercise</string>
    <string name="descEtExerciseGif">Inserted Api value for Gif</string>
    <string name="descEtExerciseEquipment">Inserted Api value for Exercise Equipment</string>
    <string name="btn_generalSportKnowledge">general</string>
    <string name="textSportKnowledge">Even though this app uses the common method of BMI calculation, we would like to point out that this method is no longer up to date. It is more important for us to consider whether you are already experienced or not. In general, if you want to reduce weight, cardio units are important. For muscle building you can use both strength training and bodyweight.  </string>
    <string name="lowSport">light</string>
    <string name="mediumSport">medium</string>
    <string name="hardSport">hard</string>
    <string name="lowSportRepetition">At your sport stage, the most important thing is to start slowly. Your body needs to build up muscles and should slowly get used to the load. Optimal are 2-3 sport units a week. If you want to put an extra focus on weight loss, one of these sessions should be a cardio session and each of your workouts should start with at least 10 minutes of cardio. You repeat the exercises between 8-10 times, as often as you can. You will do three sets with 30 seconds rest each. Before jumping to the next class, make sure you can maintain the workload.</string>
    <string name="mediumSportRepetition">You are already experienced in sports and your muscles already have a memory. Of course, if you want to reduce weight, do more cardio, and if you want muscles, do strength training. Otherwise, the focus of your training is on precision in the execution of exercises. You should try to do 15 repetitions in one set and repeat each set 3 times. If you notice that your body is not used to capacity, increase the number of repetitions and only then increase the weight.</string>
    <string name="hardSportRepetition">You are a sports professional and probably use this training only to strengthen your performance in other areas. Therefore you should start with 15-25 repetitions of 3 sets and see where you settle. Since you know best what kind of training is suitable for you, we just want to remind you to take regular breaks. </string>
    <string name="workoutHeadline">YOUR WORKOUT.</string>
    <string name="desc_Headline">RecyclerView Headline</string>
    <string name="desc_RecyclerView">RecyclerView Container for received Workout</string>
    <string name="desc_Error">TextView shown in case of error</string>
    <string name="exercise_api_error_on_failure">Could not connect to API. No data.</string>
    <string name="exercise_api_error_unsuccessful_response">Sorry, the request to the API was not successful.</string>
    <string name="content_desc_profile">Sorry, the request to the API was not successful.</string>
    <string name="cotn_MEQ">Background M.EQ. Button</string>
    <string name="cotn_MBW">Background M.BW. Button</string>
    <string name="cotn_CCC">Background C.CC. Button</string>
    <string name="btnCardioCombined">Cardio- Combined</string>
    <string name="btnCardioBodyWeight">Cardio - Body Weight</string>
    <string name="btnCardioEquipment">Cardio - Equipment</string>
    <string name="btnMuscleBodyWeight">Muscle - Body Weight</string>
    <string name="btnMuscleEquipment">Muscle - Equipment</string>
    <string name="btnStretchingBodyWeight">Stretching - Body Weight</string>
    <string name="btnStretchingEquipment">Stretching - Equipment</string>
    <string name="ctnCardioArea">ContainerCardio</string>
    <string name="ctnMuscleArea">ContainerMuscle</string>
    <string name="ctnstretchingArea">ContainerStretching</string>
    <string name="yourName">Your Name</string>
    <string name="yourAge">Your Age</string>
    <string name="yourWeight">Your Weight in kg</string>
    <string name="yourHeight">Your Height in cm</string>
    <string name="yourSex">Your Sex</string>
    <string name="yourSport">Your Sport</string>
    <string name="btnSave">Save Button</string>
    <string name="saveAndShowStats">Save and show Stats</string>
    <string name="enterYourNameHere">Enter your name here</string>
    <string name="enterYourAgeHere">Enter your age here (e.g. 20)</string>
    <string name="enterYourWeightHere">Enter your weight here</string>
    <string name="enterYourHeightHere">Enter your height here</string>
    <string name="chooseYourSexHere">Choose your sex here</string>
    <string name="chooseYourSportHere">Choose your sport here</string>
    <string name="show_stats">Show Stats</string>
    <string name="btn_show_stats">Button to show User Stats</string>
    <string name="cardio_without_equipment">Cardio</string>
    <string name="energyCategories">Energy Categories</string>
    <string name="cardio_with_equipment">Cardio with Equipment</string>
    <string name="muscle_building_without_equipment">Muscle building without equipment</string>
    <string name="muscle_building_with_equipment">Muscle building with equipment</string>
    <string name="pickYourWorkEnergyNeed">Pick your work energy need</string>
    <string name="yourWorkHours">Your work Hours</string>
    <string name="enterYourWorkHoursHere">Enter your work hours here (e.g. 7.5)</string>
    <string name="pickYourSportEnergyNeed">Pick your sport energy need</string>
    <string name="yourSportHours">Your sport hours (e.g. 2.1)</string>
    <string name="enterYourSportHoursHere">Enter your sport hours here (e.g. 4)</string>
    <string name="yourSleepHours">Your sleep hours</string>
    <string name="enterYourSleepHoursHere">Enter your sleep hours here (e.g. 10.56)</string>
    <string name="palSleep">Sleep 0.95</string>
    <string name="palJustSittingOrLayingActivity">Only sitting or laying activity 1.2</string>
    <string name="palMostlySittingOrLayingActivity">Mostly sitting or laying activity 1.4</string>
    <string name="palSomeWalkingActivity">Sitting activity with some walking 1.6</string>
    <string name="palMostlyWalkingOrStandingActivity">Mostly walking or sitting activity 1.8</string>
    <string name="palPhysicalDemandingActivity">Physical demanding activity 2.0</string>
    <string name="palPhysicalVeryDemandingActivity">Physical very demanding activity 2.4</string>
    <string name="palVeryLightSport">Very light Sport 1.6</string>
    <string name="palLightSport">Light Sport 1.8</string>
    <string name="palModerateSport">Moderate Sport 2.0</string>
    <string name="palPhysicalDemandingSport">Physical demanding sport 2.4</string>
    <string name="palPhysicalVeryDemandingSport">Physical very demanding sport 2.7</string>
    <string name="palCompetitiveSport">Competitive Sport 3.0</string>
    <string name="disclaimer">DISCLAIMER: Those values are indicators.</string>
    <string name="yourBmi">Your BMI</string>
    <string name="yourDailyEnergyNeed">Your Daily Energy Need (not exact)</string>
    <string name="yourBmiCategory">Your BMI Category (not exact)</string>
    <string name="bmiOutOfRange">BMI out of Range</string>
    <string name="unitForKjValueWithLeadingSpace"> kj</string>
    <string name="spacerBetweenKjValueAndKcalValue"> / </string>
    <string name="unitForKcalValueWithLeadingSpace"> kcal</string>
    <string name="valuesForBMIAreIncomplete">Values for BMI are incomplete </string>
    <string name="severeUnderweight">Severe underweight</string>
    <string name="moderateUnderweight">Moderate underweight</string>
    <string name="slightUnderweight">Slight underweight</string>
    <string name="normalWeight">Normal weight</string>
    <string name="preadiposity">Preadiposity</string>
    <string name="obesityGradeOne">Obesity grade 1</string>
    <string name="obesityGradeTwo">Obesity grade 2</string>
    <string name="obesityGradeThree">Obesity grade 3</string>
    <string name="tachjen">tachjen</string>
    <string name="btnTestCalculation">Test Calculation</string>
    <string name="placeholderOneWord">Placeholder</string>
    <string name="standardUserName">user</string>
    <string name="none">none</string>
    <string name="bmiColorPlaceholder">#000</string>
    <string name="sexPlaceHolder">none</string>
    <string name="dailyEnergyNeedKcalAndKjStringPlaceholder">0.0 kcal / 0.0 kj</string>
    <string name="pickYourSex">Pick your Sex</string>
    <string name="sexMan">Man</string>
    <string name="sexWoman">Woman</string>
    <string name="woman">Woman</string>
    <string name="man">Man</string>
    <string name="divers">Divers</string>
    <string name="sun">sun</string>
    <string name="spacerBetweenTwoKjValues">" - "</string>
    <string name="home">HOME</string>
    <string name="sport">SPORT</string>
    <string name="sportKnowledge">SPORT KNOWLEDGE</string>
    <string name="nutrition">NUTRITION</string>
    <string name="profile">PROFILE</string>
    <string name="bodyCalculations">BODY CALCULATIONS</string>
    <string name="diary">DIARY</string>
    <string-array name="theme_array">
        <item>BasicTheme</item>
        <item>RoseTheme</item>
        <item>SunnyTheme</item>
        <item>ForestTheme</item>
    </string-array>
    <string name="errorMessageAgeMinimum">age must be minimum 0 years</string>
    <string name="errorMessageWeightMinimum">weight must be minimum 0.0 kg</string>
    <string name="errorMessageHeightMinimum">height must be minimum 0.0 cm</string>
</resources>