<?xml version="1.0" encoding="utf-8"?>
<!--Item description show in Workout Recycler View-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground">

    <!--Guidelines for fixed Position-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl10PercentVert"
        android:layout_width="@dimen/size_0"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl90PercentVert"
        android:layout_width="@dimen/size_0"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <!--Headline aka Name of Exercise-->
    <TextView
        android:id="@+id/tvExerciseName"
        style="?textRegular"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10"
        app:layout_constraintTop_toTopOf="@id/spaceHeadlineTop"
        app:layout_constraintStart_toStartOf="@id/gl10PercentVert"
        app:layout_constraintEnd_toStartOf="@id/gl90PercentVert"
        android:text="@string/tvExerciseName"
        android:contentDescription="@string/tvExerciseName"/>

    <!--Initialization and Definition of BodyPart-->
    <TextView
        android:id="@+id/tvBodyPart"
        style="?textRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spaceHeadlineBottom"
        app:layout_constraintStart_toStartOf="@id/gl10PercentVert"
        app:layout_constraintEnd_toStartOf="@id/gl90PercentVert"
        app:layout_constraintHorizontal_bias="0"
        android:text="@string/tvBodyPart"
        android:contentDescription="@string/tvBodyPart"/>

    <TextView
        android:id="@+id/tvBodyPartInsertValue"
        style="?textRegular"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spaceHeadlineBottom"
        app:layout_constraintStart_toEndOf="@id/tvBodyPart"
        app:layout_constraintEnd_toEndOf="@id/gl90PercentVert"
        android:text="@string/etBodyPart"
        android:contentDescription="@string/descEtBodyPart"/>

    <!--Initialization and Definition of Target-->
    <TextView
        android:id="@+id/tvTagret"
        style="?textRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spaceBodyPartBottom"
        app:layout_constraintStart_toStartOf="@id/gl10PercentVert"
        app:layout_constraintEnd_toStartOf="@id/gl90PercentVert"
        app:layout_constraintHorizontal_bias="0"
        android:text="@string/tvTargetOfExercise" />

    <TextView
        android:id="@+id/tvTargetInsertValue"
        style="?textRegular"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spaceBodyPartBottom"
        app:layout_constraintStart_toEndOf="@id/tvTagret"
        app:layout_constraintEnd_toEndOf="@id/gl90PercentVert"
        android:text="@string/etTargetOfExercise"
        android:contentDescription="@string/descEtTargetOfExercise"/>

    <!--Initialization and Definition of Equipment-->
    <TextView
        android:id="@+id/tvEquipment"
        style="?textRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spaceTargetBottom"
        app:layout_constraintStart_toStartOf="@id/gl10PercentVert"
        app:layout_constraintEnd_toStartOf="@id/gl90PercentVert"
        app:layout_constraintHorizontal_bias="0"
        android:text="@string/tvExerciseEquipment" />

    <TextView
        android:id="@+id/tvEquipmentInsertValue"
        style="?textRegular"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spaceTargetBottom"
        app:layout_constraintStart_toEndOf="@id/tvEquipment"
        app:layout_constraintEnd_toEndOf="@id/gl90PercentVert"
        android:text="@string/etExerciseEquipment"
        android:contentDescription="@string/descEtExerciseEquipment"/>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/ivExerciseGif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/spaceEquipmentBottom"
        app:layout_constraintLeft_toLeftOf="@id/gl10PercentVert"
        app:layout_constraintRight_toRightOf="@id/gl90PercentVert"
        android:src="@drawable/giphy" />

    <!--Spearation Spaces for Layout-->
    <Space
        android:id="@+id/spaceHeadlineTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_10"
        app:layout_constraintTop_toTopOf="parent" />
    <Space
        android:id="@+id/spaceHeadlineBottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_10"
        app:layout_constraintTop_toBottomOf="@id/tvExerciseName" />
    <Space
        android:id="@+id/spaceBodyPartBottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_10"
        app:layout_constraintTop_toBottomOf="@id/tvBodyPartInsertValue" />
    <Space
        android:id="@+id/spaceTargetBottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_10"
        app:layout_constraintTop_toBottomOf="@id/tvTargetInsertValue" />
    <Space
        android:id="@+id/spaceEquipmentBottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_30"
        app:layout_constraintTop_toBottomOf="@id/tvEquipmentInsertValue" />
    <Space
        android:id="@+id/spaceGifBottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_10"
        app:layout_constraintTop_toBottomOf="@id/ivExerciseGif" />



</androidx.constraintlayout.widget.ConstraintLayout>