<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_see_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_generalSportKnowledge"
        style="?button"
        app:layout_constraintTop_toBottomOf="@id/gl1percenthor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_lowSport"/>

    <Button
        android:id="@+id/btn_lowSport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lowSport"
        style="?button"
        app:layout_constraintTop_toBottomOf="@id/gl1percenthor"
        app:layout_constraintStart_toEndOf="@id/btn_see_info"
        app:layout_constraintEnd_toStartOf="@id/btn_mediumSport"/>

    <Button
        android:id="@+id/btn_mediumSport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mediumSport"
        style="?button"
        app:layout_constraintTop_toBottomOf="@id/gl1percenthor"
        app:layout_constraintStart_toEndOf="@id/btn_lowSport"
        app:layout_constraintEnd_toStartOf="@id/btn_hardSport" />

    <Button
        android:id="@+id/btn_hardSport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hardSport"
        style="?button"
        app:layout_constraintTop_toBottomOf="@id/gl1percenthor"
        app:layout_constraintStart_toEndOf="@id/btn_mediumSport"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_recommendation"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:text="@string/textSportKnowledge"
        app:layout_constraintTop_toBottomOf="@id/btn_hardSport"
        app:layout_constraintStart_toStartOf="@id/gl10percentvert"
        app:layout_constraintEnd_toEndOf="@id/gl90percentvert" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl10percentvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl90percentvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl1percenthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl30percenthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl45percenthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.450" />

</androidx.constraintlayout.widget.ConstraintLayout>