<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/size_8"
    tools:context=".ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl50PercentVert"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="206dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl33PercentVert"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl66PercentVert"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl99PercentVert"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.99" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl009PercentHor"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl40PercentHor"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl50PercentHor"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTopHor"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBottomHor"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1" />

    <TextView
        android:id="@+id/tv_disclaimer"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        style="@style/NormalText"
        android:text="@string/disclaimer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gl009PercentHor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_your_bmi"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        style="@style/NormalText"
        android:text="@string/yourBmi"
        app:layout_constraintTop_toBottomOf="@+id/tv_disclaimer"
        app:layout_constraintBottom_toTopOf="@id/tv_your_bmi_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_your_bmi_value"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:text="@string/placeholderOneWord"
        style="@style/NormalText"
        app:layout_constraintTop_toBottomOf="@+id/tv_your_bmi"
        app:layout_constraintBottom_toTopOf="@+id/tv_your_bmi_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_your_bmi_category"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        style="@style/NormalText"
        android:text="@string/yourBmiCategory"
        app:layout_constraintTop_toBottomOf="@+id/tv_your_bmi_value"
        app:layout_constraintBottom_toTopOf="@id/tv_your_bmi_category_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_your_bmi_category_value"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        style="@style/NormalText"
        android:text="@string/placeholderOneWord"
        app:layout_constraintTop_toBottomOf="@+id/tv_your_bmi_category"
        app:layout_constraintBottom_toTopOf="@+id/tv_your_daily_energy_need"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_your_daily_energy_need"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        style="@style/NormalText"
        android:text="@string/yourDailyEnergyNeed"
        app:layout_constraintTop_toBottomOf="@+id/tv_your_bmi_category_value"
        app:layout_constraintBottom_toTopOf="@id/tv_your_daily_energy_need_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_your_daily_energy_need_value"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        style="@style/NormalText"
        android:text="@string/placeholderOneWord"
        app:layout_constraintTop_toBottomOf="@+id/tv_your_daily_energy_need"
        app:layout_constraintBottom_toBottomOf="@+id/glBottomHor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>